--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.17.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lazyload": "^3.2.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
