--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-intersection-observer": "^9.13.0",
     "react-lazyload": "^3.2.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-tsparticles": "^2.12.2",
     "simple-icons": "^13.7.0",
     "styled-icons": "^10.47.1",
